--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,1 @@
-#Project properties
-#Sat Nov 27 12:15:12 JST 2010
-project.organization=com.github.okomok
-project.name=hano
-sbt.version=0.7.7
-project.version=0.1.1-SNAPSHOT
-build.scala.versions=2.9.0-1
-project.initialize=false
+sbt.version=0.12.2-RC1
